@@ -17,6 +17,7 @@ test-mul
 test-scenario-mul-mod
 test-set
 test-set-l
+test-shift-right
 test-subtract
 test-bytes-shift-left
 test-bytes-shift-right
